--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -4,9 +4,8 @@ import { Colors } from "../constants/colors";
 const yearsExperience = import.meta.env.PUBLIC_YEARS_EXPERIENCE
 
 ---
-
-<div class="HomeSection SectionMain flex flex-col" id="">
-  <div class="HomeSection-image"></div>
+<main class="HomeSection SectionMain flex flex-col" id="">
+  <img class="HomeSection-image"></>
   <p class="mt-10 text-3xl font-bold">
     Faihd Pineda
   </p>
@@ -15,7 +14,7 @@ const yearsExperience = import.meta.env.PUBLIC_YEARS_EXPERIENCE
     <span class="SectionMain-experience" id="experience">{ yearsExperience } year</span><span class="SectionMain-punter is-desactiveAnimation" id="punter">|</span> 
     experience in the web develpoment and the cloud services
   <p/>
-</div>
+</main>
 
 <script>
   const experienceSpan = document.getElementById("experience")
