--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -2,7 +2,7 @@
 import { Colors } from "../constants/colors";
 ---
 
-<a href="/projects">
+<a href="/my-portfolio/projects">
   <div class="HomeSection SecondSection ProjectsSection flex flex-col">
     <div class="HomeSection-image" />
     <div class="HomeSection-text max-w-xs text-left mt-10">
