--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,10 +12,9 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="This is a web portfolio about the fullstack develpoer FaihdP" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/webp" href="/images/portfolio.webp" />
-		<meta name="generator" content={Astro.generator} />
+		<link rel="icon" type="image/webp" href="/my-portfolio/images/favicon.webp" />
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen">
