--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -2,7 +2,7 @@
 import { Colors } from "../constants/colors";
 ---
 
-<a href="/about">
+<a href="/my-portfolio/about">
   <div class="HomeSection SecondSection AboutSection flex flex-col">
     <div class="HomeSection-image" />
     <div class="HomeSection-text max-w-xs text-left mt-10">
