--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -1,5 +1,5 @@
 ---
-import { Colors } from "../constants/colors";
+import { Colors, YEARS_EXPERIENCE } from "../constants/colors";
 ---
 
 <main class="HomeSection SectionMain flex flex-col" id="">
@@ -9,7 +9,7 @@ import { Colors } from "../constants/colors";
   </p>
   <p class="HomeSection-text max-w-md text-center text-lg mt-5">
     Full-Stack developer, with 
-    <span class="SectionMain-experience" id="experience">{ import.meta.env.PUBLIC_YEARS_EXPERIENCE } year</span><span class="SectionMain-punter is-desactiveAnimation" id="punter">|</span> 
+    <span class="SectionMain-experience" id="experience">{ YEARS_EXPERIENCE } year</span><span class="SectionMain-punter is-desactiveAnimation" id="punter">|</span> 
     experience in the web develpoment and the cloud services
   <p/>
 </main>
