--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,11 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="This is a web portfolio about the fullstack develpoer FaihdP" />
+		<meta name="description" content="Web portfolio about the fullstack developer Faihd Pineda" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="autor" content="FaihdP" />
+		<meta name="robots" content="all"/>
+		<meta name="keywords" content="portfolio, portafolio, FaihdP, fullstack, full-stack, developer, dev, front-end, back-end, web developer, full stack, desarrollo de software, programming, diseño web, back-end, front-end, tecnologías web, web projects, portfolio, HTML, CSS, JavaScript, Node.js, React, MongoDB, MySQL, Express, Git, agile development, responsive design, UX/UI, desarrollo de aplicaciones web, interface design, clean code, habilidades técnicas, development experience, showcase de proyectos" />
 		<link rel="icon" type="image/webp" href="/my-portfolio/images/favicon.webp" />
 		<title>{title}</title>
 	</head>
