--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -1,5 +1,5 @@
 ---
-import { Colors } from "../constants/colors";
+import { Colors } from "../constants";
 ---
 
 <a href="/my-portfolio/projects">
