--- a/src/css/HamburgerButton.css
+++ b/src/css/HamburgerButton.css
@@ -96,7 +96,7 @@
 }
 
 .open-in-animation {
-  animation: open-in .4s cubic-bezier(.18,.89,.67,1.16) 1 normal forwards;
+  animation: open-in .4s cubic-bezier(.18,.89,.67,1.16) .4s 1 normal forwards;
 }
 
 .open-in-animation:nth-child(1) {
@@ -105,6 +105,76 @@
 
 .open-in-animation:nth-child(3) {
   animation-duration: 0.3s;
+}
+
+.close-out-animation:nth-child(1) {
+  animation: close-out-1 .3s linear 1 normal forwards;
+}
+
+.close-out-animation:nth-child(2) {
+  animation: close-out-2 .4s linear 1 normal forwards;
+}
+
+.Header-buttonContainer-menu {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  width: 56px;
+  height: 56px;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all .6s ease .3s;
+  z-index: -10;
+  border-radius: 50%;
+}
+
+.Header-buttonContainer-shadow {
+  position: absolute; 
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 56px;
+  height: 56px;
+  right: 50px;
+  top: 30px;
+  border-radius: 50%;
+  z-index: -10;
+  transition: transform 1s ease;
+}
+
+.Header-buttonContainer-shadow.is-open.first-open {
+  transform: scale(30);  
+}
+
+.Header-buttonContainer-shadow.is-open.second-open {
+  transform: scale(40);  
+}
+
+.Header-buttonContainer-shadow.is-open.third-open {
+  transform: scale(45);  
+}
+
+.Header-buttonContainer-menu-option {
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  transition: transform .8s ease;
+  display: grid;
+  place-content: center;
+  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.Header-buttonContainer-menu-option.firts-option.is-open {
+  transform: translateY(80px);
+  transition-delay: .3s;
+}
+
+.Header-buttonContainer-menu-option.second-option.is-open {
+  transform: translateY(150px);
+  transition-delay: .6s;
+}
+
+.Header-buttonContainer-menu-option.third-option.is-open {
+  transform: translateY(220px);
+  transition-delay: .9s;
 }
 
 @keyframes open-in {
@@ -197,48 +267,48 @@
 
 @keyframes close-in-1 {
   0% {
-    -moz-transform: scaleY(0) translateY(-10px);
-    -ms-transform: scaleY(0) translateY(-10px);
-    -webkit-transform: scaleY(0) translateY(-10px);
     transform: scaleY(0) translateY(-10px);
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
   }
 
   100% {
-    -moz-transform: scaleY(1) translateY(0);
-    -ms-transform: scaleY(1) translateY(0);
-    -webkit-transform: scaleY(1) translateY(0);
     transform: scaleY(1) translateY(0);
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
   }
 }
 
 @keyframes close-in-2 {
   0% {
-    -moz-transform: scaleX(0) translateX(-10px);
-    -ms-transform: scaleX(0) translateX(-10px);
-    -webkit-transform: scaleX(0) translateX(-10px);
     transform: scaleX(0) translateX(-10px);
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
   }
 
   100% {
-    -moz-transform: scaleX(1) translateX(0);
-    -ms-transform: scaleX(1) translateX(0);
-    -webkit-transform: scaleX(1) translateX(0);
     transform: scaleX(1) translateX(0);
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
+  }
+}
+
+@keyframes close-out-1 {
+  0% {
+    transform: scaleX(1) translateX(0);
+    transform-origin: 100% 100%;
+  }
+
+  100% {
+    transform: scaleX(0) translateX(10px);
+    transform-origin: 100% 100%;
+  }
+}
+
+@keyframes close-out-2 {
+  0% {
+    transform: scaleY(1) translateY(0);
+    transform-origin: 100% 100%;
+  }
+
+  100% {
+    transform: scaleY(0) translateY(10px);
+    transform-origin: 100% 100%;
   }
 }
